assignment1/initial/src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from c:/Users/Snow/source/repos/MiniGo-complier/assignment1/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "';'", "'import'", "'('", 
                     "')'", "'var'", "'='", "','", "':='", "'type'", "'func'", 
                     "'*'", "'...'", "'int'", "'int8'", "'int16'", "'int32'", 
                     "'int64'", "'uint'", "'uint8'", "'uint16'", "'uint32'", 
                     "'uint64'", "'float32'", "'float64'", "'float'", "'string'", 
                     "'bool'", "'byte'", "'rune'", "'['", "']'", "'struct'", 
                     "'{'", "'}'", "'interface'", "'map'", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'++'", "'--'", "'if'", "'else'", 
                     "'for'", "'range'", "'switch'", "'case'", "'default'", 
                     "':'", "'go'", "'defer'", "'return'", "'break'", "'continue'", 
                     "'?'", "'+'", "'-'", "'!'", "'^'", "'&'", "'<-'", "'/'", 
                     "'%'", "'|'", "'<<'", "'>>'", "'&^'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INTLIT", "BINARY_LIT", "DECIMAL_LIT", "OCTAL_LIT", 
                      "HEX_LIT", "FLOATLIT", "DECIMAL_FLOAT", "HEX_FLOAT", 
                      "EXPONENT", "HEX_EXPONENT", "BOOLLIT", "STRINGLIT", 
                      "RAW_STRING", "INTERPRETED_STRING", "ESCAPED_CHAR", 
                      "RUNELIT", "ID", "COMMENT", "BLOCK_COMMENT", "WS", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_packageDecl = 1
    RULE_importDecl = 2
    RULE_importSpec = 3
    RULE_decl = 4
    RULE_vardecl = 5
    RULE_shortVardecl = 6
    RULE_typedecl = 7
    RULE_funcdecl = 8
    RULE_methodDecl = 9
    RULE_receiver = 10
    RULE_result = 11
    RULE_paramlist = 12
    RULE_param = 13
    RULE_typespec = 14
    RULE_primitiveType = 15
    RULE_arrayType = 16
    RULE_sliceType = 17
    RULE_structType = 18
    RULE_pointerType = 19
    RULE_functionType = 20
    RULE_interfaceType = 21
    RULE_mapType = 22
    RULE_stmt = 23
    RULE_simpleStmt = 24
    RULE_assignstmt = 25
    RULE_lhs = 26
    RULE_exprStmt = 27
    RULE_incDecStmt = 28
    RULE_ifstmt = 29
    RULE_forstmt = 30
    RULE_switchstmt = 31
    RULE_caseclause = 32
    RULE_blockstmt = 33
    RULE_gostmt = 34
    RULE_deferstmt = 35
    RULE_returnstmt = 36
    RULE_breakstmt = 37
    RULE_continuestmt = 38
    RULE_expr = 39
    RULE_unaryExpr = 40
    RULE_unaryOp = 41
    RULE_binaryOp = 42
    RULE_primaryExpr = 43
    RULE_operand = 44
    RULE_basicLit = 45
    RULE_functionLit = 46
    RULE_compositeLit = 47
    RULE_literalType = 48
    RULE_keyValList = 49
    RULE_keyVal = 50
    RULE_conversion = 51
    RULE_exprlist = 52
    RULE_idlist = 53

    ruleNames =  [ "program", "packageDecl", "importDecl", "importSpec", 
                   "decl", "vardecl", "shortVardecl", "typedecl", "funcdecl", 
                   "methodDecl", "receiver", "result", "paramlist", "param", 
                   "typespec", "primitiveType", "arrayType", "sliceType", 
                   "structType", "pointerType", "functionType", "interfaceType", 
                   "mapType", "stmt", "simpleStmt", "assignstmt", "lhs", 
                   "exprStmt", "incDecStmt", "ifstmt", "forstmt", "switchstmt", 
                   "caseclause", "blockstmt", "gostmt", "deferstmt", "returnstmt", 
                   "breakstmt", "continuestmt", "expr", "unaryExpr", "unaryOp", 
                   "binaryOp", "primaryExpr", "operand", "basicLit", "functionLit", 
                   "compositeLit", "literalType", "keyValList", "keyVal", 
                   "conversion", "exprlist", "idlist" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    INTLIT=80
    BINARY_LIT=81
    DECIMAL_LIT=82
    OCTAL_LIT=83
    HEX_LIT=84
    FLOATLIT=85
    DECIMAL_FLOAT=86
    HEX_FLOAT=87
    EXPONENT=88
    HEX_EXPONENT=89
    BOOLLIT=90
    STRINGLIT=91
    RAW_STRING=92
    INTERPRETED_STRING=93
    ESCAPED_CHAR=94
    RUNELIT=95
    ID=96
    COMMENT=97
    BLOCK_COMMENT=98
    WS=99
    ERROR_CHAR=100
    ILLEGAL_ESCAPE=101
    UNCLOSE_STRING=102

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def packageDecl(self):
            return self.getTypedRuleContext(MiniGoParser.PackageDeclContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def importDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.ImportDeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.ImportDeclContext,i)


        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.DeclContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.packageDecl()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 109
                self.importDecl()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.decl()
                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3136) != 0)):
                    break

            self.state = 120
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_packageDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDecl" ):
                listener.enterPackageDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDecl" ):
                listener.exitPackageDecl(self)




    def packageDecl(self):

        localctx = MiniGoParser.PackageDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MiniGoParser.T__0)
            self.state = 123
            self.match(MiniGoParser.ID)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 124
                self.match(MiniGoParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGLIT(self):
            return self.getToken(MiniGoParser.STRINGLIT, 0)

        def importSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.ImportSpecContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.ImportSpecContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_importDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDecl" ):
                listener.enterImportDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDecl" ):
                listener.exitImportDecl(self)




    def importDecl(self):

        localctx = MiniGoParser.ImportDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MiniGoParser.T__2)
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [91]:
                self.state = 128
                self.match(MiniGoParser.STRINGLIT)
                pass
            elif token in [4]:
                self.state = 129
                self.match(MiniGoParser.T__3)
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 130
                    self.importSpec()
                    self.state = 133 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==91):
                        break

                self.state = 135
                self.match(MiniGoParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 139
                self.match(MiniGoParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGLIT(self):
            return self.getToken(MiniGoParser.STRINGLIT, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_importSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportSpec" ):
                listener.enterImportSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportSpec" ):
                listener.exitImportSpec(self)




    def importSpec(self):

        localctx = MiniGoParser.ImportSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(MiniGoParser.STRINGLIT)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 143
                self.match(MiniGoParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclContext,0)


        def typedecl(self):
            return self.getTypedRuleContext(MiniGoParser.TypedeclContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decl)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.funcdecl()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.vardecl()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.typedecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MiniGoParser.IdlistContext,0)


        def typespec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.TypespecContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.TypespecContext,i)


        def exprlist(self):
            return self.getTypedRuleContext(MiniGoParser.ExprlistContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.ID)
            else:
                return self.getToken(MiniGoParser.ID, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.ExprContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_vardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl" ):
                listener.enterVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl" ):
                listener.exitVardecl(self)




    def vardecl(self):

        localctx = MiniGoParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(MiniGoParser.T__5)
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 152
                self.idlist()
                self.state = 153
                self.typespec()
                self.state = 154
                self.match(MiniGoParser.T__1)
                pass

            elif la_ == 2:
                self.state = 156
                self.idlist()
                self.state = 157
                self.typespec()
                self.state = 158
                self.match(MiniGoParser.T__6)
                self.state = 159
                self.exprlist()
                self.state = 160
                self.match(MiniGoParser.T__1)
                pass

            elif la_ == 3:
                self.state = 162
                self.match(MiniGoParser.T__3)
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==96:
                    self.state = 163
                    self.match(MiniGoParser.ID)
                    self.state = 164
                    self.typespec()
                    self.state = 167
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==7:
                        self.state = 165
                        self.match(MiniGoParser.T__6)
                        self.state = 166
                        self.expr(0)


                    self.state = 169
                    self.match(MiniGoParser.T__1)
                    self.state = 175
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 176
                self.match(MiniGoParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShortVardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.ID)
            else:
                return self.getToken(MiniGoParser.ID, i)

        def exprlist(self):
            return self.getTypedRuleContext(MiniGoParser.ExprlistContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_shortVardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShortVardecl" ):
                listener.enterShortVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShortVardecl" ):
                listener.exitShortVardecl(self)




    def shortVardecl(self):

        localctx = MiniGoParser.ShortVardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_shortVardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(MiniGoParser.ID)
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 180
                self.match(MiniGoParser.T__7)
                self.state = 181
                self.match(MiniGoParser.ID)
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 187
            self.match(MiniGoParser.T__8)
            self.state = 188
            self.exprlist()
            self.state = 189
            self.match(MiniGoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.ID)
            else:
                return self.getToken(MiniGoParser.ID, i)

        def typespec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.TypespecContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.TypespecContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_typedecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedecl" ):
                listener.enterTypedecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedecl" ):
                listener.exitTypedecl(self)




    def typedecl(self):

        localctx = MiniGoParser.TypedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typedecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(MiniGoParser.T__9)
            self.state = 207
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [96]:
                self.state = 192
                self.match(MiniGoParser.ID)
                self.state = 193
                self.typespec()
                self.state = 194
                self.match(MiniGoParser.T__1)
                pass
            elif token in [4]:
                self.state = 196
                self.match(MiniGoParser.T__3)
                self.state = 203
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==96:
                    self.state = 197
                    self.match(MiniGoParser.ID)
                    self.state = 198
                    self.typespec()
                    self.state = 199
                    self.match(MiniGoParser.T__1)
                    self.state = 205
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 206
                self.match(MiniGoParser.T__4)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(MiniGoParser.BlockstmtContext,0)


        def paramlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.ParamlistContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.ParamlistContext,i)


        def typespec(self):
            return self.getTypedRuleContext(MiniGoParser.TypespecContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_funcdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdecl" ):
                listener.enterFuncdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdecl" ):
                listener.exitFuncdecl(self)




    def funcdecl(self):

        localctx = MiniGoParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self.match(MiniGoParser.T__10)
            self.state = 210
            self.match(MiniGoParser.ID)
            self.state = 211
            self.match(MiniGoParser.T__3)
            self.state = 213
